<?xml version="1.0" encoding="utf-8"?>
<merge
  xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v4.view.ViewPager android:id="@id/first_run_pager" style="@style/FirstRunViewPager" />
    <LinearLayout style="@style/FirstRunPageFooter">
        <include layout="@layout/first_run_page_indicator" />
        <ImageView style="@style/FirstRunPageIndicatorDivider" />
        <FrameLayout style="@style/FirstRunNavigation">
            <TextView android:id="@id/navi_previous" android:text="@string/first_run_previous" style="@style/FirstRunNavigationText.Left" />
            <TextView android:id="@id/navi_next" android:text="@string/first_run_next" style="@style/FirstRunNavigationText.Right" />
            <TextView android:id="@id/navi_welcome" android:text="@string/tutorial_done" style="@style/FirstRunNavigationText.Center" />
        </FrameLayout>
    </LinearLayout>
</merge>